# 86Box-droid

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vectras/a86box/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/86Box/: CMakeLists.txt
app/src/main/cpp/86Box/cdrom/: CMakeLists.txt
app/src/main/cpp/86Box/network/: CMakeLists.txt
app/src/main/java/com/vectras/a86box/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/vectras/a86box/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
